<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/icon_ads"
                android:contentDescription="@string/icon" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:alpha="0.1"
                android:background="#000000" />

            <TextView
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:text="@string/owner"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.Sandbox.Body4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:text="@string/copyright_info"
            android:textColor="#000000"
            tools:ignore="SmallSp" />

    </LinearLayout>
    <!-- TODO add SplashView XML layout -->
    <com.huawei.hms.ads.splash.SplashView
        android:id="@+id/splash_ad_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>